Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.6, 5.10.1, 5.11.1
-
-
064f0d3d23097cb181166c3e966287490773f23c (qt/qtdeclarative/5.11.3)
Description
Opening menus in a QML app leaks memory when QQuickWindow::setSceneGraphBackend is set to QSGRendererInterface::Software.
Steps to reproduce:
- run the sample attached.
- go back and forth between the app menus and keep opening them.
- monitor the memory consumpion, for example via 'Task Manager' on Windows.
EXPECTED: the memory consumpion is stable.
ACTUAL: the amount of allocated memory keeps rising steadily with each opening of a menu.
For comparison, test without the line 'QQuickWindow::setSceneGraphBackend(QSGRendererInterface::Software);'
Attachments
Issue Links
- duplicates
-
QTBUG-48949 QtQuick QML memory leak like a sieve on Windows - Menu bar only?
-
- Closed
-
For Gerrit Dashboard: QTBUG-69290 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
245092,3 | Fix leaking textures and animation resources by software backend | 5.11.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |