Fix leaking textures and animation resources by software backend

QQuickStyleItem1::updatePaintNode assumes every instance of
QSGNinePathNode (QSGSoftwareNinePatchNode for software backend)
to own new texture object on setTexture. Instance of
QQuickAnimationController is also assumed to be deleted by
render loop on window destroy.

Fixes: QTBUG-69290
Change-Id: Ibd22229108c986c1c115600280482cea01bf4160
Reviewed-by: Andy Nichols <andy.nichols@qt.io>