src/quick/scenegraph/adaptations/software/qsgsoftwarerenderloop.cpp
@@ -45,6 +45,7 @@
 
 #include <private/qquickwindow_p.h>
 #include <QElapsedTimer>
+#include <private/qquickanimatorcontroller_p.h>
 #include <private/qquickprofiler_p.h>
 #include <private/qsgsoftwarerenderer_p.h>
 #include <qpa/qplatformbackingstore.h>
@@ -99,6 +100,8 @@ void QSGSoftwareRenderLoop::windowDestroyed(QQuickWindow *window)
         rc->invalidate();
         QCoreApplication::sendPostedEvents(0, QEvent::DeferredDelete);
     }
+
+    delete d->animationController;
 }
 
 void QSGSoftwareRenderLoop::renderWindow(QQuickWindow *window, bool isNewExpose)
